# bitcoinX

./: .flake8  .gitignore  .pylintrc  .pylintrc-tests  .travis.yml  LICENCE  MANIFEST.in  README.rst  pycodestyle  pylint  pyproject.toml  setup.py
.azure-pipelines/: ci.yml  prepare-env.yml  run-tests.yml
bitcoinx/: __init__.py  address.py  aes.py  aiolib.py  asyncio_compat.py  base58.py  bip32.py  bip39.py  cashaddr.py  chain.py  coin.py  consts.py  errors.py  hashes.py  headers.py  interpreter.py  keys.py  limited_stack.py  merkle.py  misc.py  mnemonic.py  net.py  net_protocol.py  networks.py  packing.py  script.py  signature.py  tx.py  util.py  work.py
bitcoinx/data/: electrum_old.txt
tests/: conftest.py  test_address.py  test_aes.py  test_aiolib.py  test_base58.py  test_bip32.py  test_bip39.py  test_cashaddr.py  test_chain.py  test_coin.py  test_hashes.py  test_headers.py  test_interpreter.py  test_keys.py  test_limited_stack.py  test_merkle.py  test_misc.py  test_mnemonic.py  test_net.py  test_networks.py  test_packing.py  test_script.py  test_signature.py  test_signature_hash.py  test_tx.py  test_util.py  test_work.py  utils.py
tests/data/: 4d8eabfc.txn  503fd37f.sig_hashes  503fd37f.txn  9839fcf5d3406199dfbc88736768d7b9b8924a94f46247739829f0118ae31df6_ext.hex  afda808f.txn  b59de025.txn  bump.json  mainnet-headers-2016  mainnet-headers-2016.raw  mainnet-headers-compressed  testnet-headers-1155850  testnet-headers-1175328  testnet-headers-52416
