[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'bitcoinX'
dynamic = ['version', 'readme']
requires-python = '>=3.8'
dependencies = ['py-asqlite3', 'pycryptodomex', 'coincurve==18.0.0']
description = 'Library of Bitcoin functions'
authors = [{name = 'Neil Booth', email = 'kyuupichan@pm.me'}]
license = {file = "LICENCE"}
urls = {'Project-URL' = 'https://github.com/kyuupichan/bitcoinX'}
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  "Programming Language :: Python :: 3.8",
  'Topic :: Internet',
  "Topic :: Software Development :: Libraries :: Python Modules",
]
